# validator

./: .appveyor.yml  .classpath  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitsubtrees.yaml  .hgignore  .hgtags  .htaccess  .mailmap  .npmignore  .pre-commit-config.yaml  .project  .pullapprove.yml  .travis.yml  BUGS.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS  DOWNLOAD.html.bg  DOWNLOAD.html.de  DOWNLOAD.html.el  DOWNLOAD.html.en  DOWNLOAD.html.fr  DOWNLOAD.html.hi  DOWNLOAD.html.it  DOWNLOAD.html.ja  DOWNLOAD.html.ko  DOWNLOAD.html.nl  DOWNLOAD.html.pt-BR  DOWNLOAD.html.ro  DOWNLOAD.html.uk  DOWNLOAD.html.zh-cn  Dockerfile  Email.html.en  Email.html.fr  Email.html.ja  HOWTO.html  (+106 more)
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
_layouts/: default.html
autotest/: .project  AutoTest.java  AutoTestContentHandler.java  Result.java  autotest.sh
bugs/: 1269.css  1269bis.css  1885.css  2560.css  2920-2.css  2920-3.css  2920-4.css  2920-5.css  2920-6.css  2920-7.css  3627.css  3628.css  3630.css  3631.css  3632.css  3633-1.css  3633-2.css  374.css  391printscreen.css  4469.css  4828-bom_notatmedia.css  4870-5586.css  576css3.css  599.css  697.css  697_media.html  763mobile.css  (+3 more)
jing-trang/gcj/: README  README.redhat8  aclocal.m4  configure.ac  crimson.copying.txt  crimson.patch  dirs.xsl  dist  esplit.xsl  jing.1  jing.spec  readme.txt  rpmmacros  rpmrc  rules.mk  test_jing.mk  test_trang.mk  todo.txt  trang.1  trang.spec  vars.mk  xerces-regex.patch  xerces.copying.txt
(+10497 files in other folders)
